--- a/atleticus-react-native/app.json
+++ b/atleticus-react-native/app.json
@@ -14,10 +14,14 @@
     "assetBundlePatterns": [
       "**/*"
     ],
+    "plugins": [
+      "@react-native-google-signin/google-signin"
+    ],
     "ios": {
       "supportsTablet": true
     },
     "android": {
+      "package": "com.colosseum.atleticus",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -25,6 +29,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "60e70f9e-82e7-4b6e-b05b-9a699a5066a9"
+      }
     }
   }
 }
