--- a/atleticus-react-native/package.json
+++ b/atleticus-react-native/package.json
@@ -10,7 +10,10 @@
     "ts:check": "tsc"
   },
   "dependencies": {
+    "@react-native-google-signin/google-signin": "^11.0.0",
     "expo": "~50.0.3",
+    "expo-dev-client": "~3.3.7",
+    "expo-network": "~5.8.0",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.2"
