--- a/atleticus-react-native/eas.json
+++ b/atleticus-react-native/eas.json
@@ -5,8 +5,7 @@
   "build": {
     "development": {
       "env": {
-        "GOOGLE_SIGNIN_WEB_CLIENT_ID": "GOOGLE_SIGNIN_WEB_CLIENT_ID",
-        "ANDROID_PACKAGE_NAME": "ANDROID_PACKAGE_NAME"
+        "GOOGLE_SIGNIN_WEB_CLIENT_ID": "GOOGLE_SIGNIN_WEB_CLIENT_ID"
       },
       "developmentClient": true,
       "distribution": "internal"
