--- a/atleticus-react-native/package.json
+++ b/atleticus-react-native/package.json
@@ -17,7 +17,8 @@
     "expo-network": "~5.8.0",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "0.73.2",
+    "expo-constants": "~15.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
